--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,40 @@
-/* Reset CSS */
-/* This part is optional but often used in many projects to normalize the styling between different browsers */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-
 body {
-    line-height: 1;
-    margin: 0;
-    padding: 0;
-    background: #000; /* or any color you prefer for the background */
-    overflow: hidden; /* optional: this prevents the browser from scrolling */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Make body take full viewport height */
+    margin: 0; /* Reset default margin */
+    color: white;
 }
 
-html, body {
-    height: 100%;
+#header, #footer {
+    width: 100%;
+    flex-shrink: 0; /* Prevents flexbox from shrinking these items */
+    background-color: black;
+}
+
+#main-content {
+    display: flex;
+    justify-content: space-between; /* Adjust this as per your design preference */
+    align-items: flex-start;
+    width: 100%; /* Adjust this to change content width */
+    flex-grow: 1; /* Allows this item to grow and take any available space */
+    background-color: black;
 }
 
 #gameContainer {
-    position: relative; /* change to 'absolute' if you don't want it to affect surrounding elements */
-    width: calc(100% - 400px); /* Full width minus 200px from each side */
-    height: calc(100% - 400px); /* Full height minus 200px from top and bottom */
-    margin: auto; /* Centers the game container */
+    /* Your game container styles, width and height */
+    width: calc(100% - 800px);
+    height: calc(100% - 400px);
+    margin: 200px auto;
+    background-color: black;
+    flex-shrink: 0; /* Prevents flexbox from shrinking this item */
 }
 
-#gameContainer canvas {
-    display: block;
-    width: 100%; /* This will be relative to the parent container, i.e., #gameContainer */
-    height: 100%;
-    margin: auto; /* Centers the canvas inside the game container */
+#sidebar-left, #sidebar-right {
+    /* Your sidebar styles, width, etc. */
+    background-color: black;
 }
+
+/* Add media queries for responsive design as necessary */
